--- a/src/Projects.css
+++ b/src/Projects.css
@@ -6,6 +6,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    color: #fff;
 }
 
 .projects-header h1 {
@@ -13,6 +14,9 @@
     font-weight: 700;
     line-height: 88px;
     letter-spacing: -2.5px;
+}
+
+.projects-header button {
     color: #fff;
 }
 
