--- a/src/styles/Contato.css
+++ b/src/styles/Contato.css
@@ -7,3 +7,74 @@
     color: #fff;
 }
 
+form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 40px;
+    color: #fff;
+    width: 100%;
+
+}
+
+.form-group {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    font-size: 16px;
+}
+
+input {
+    border: none;
+    outline: none;
+    height: 55px;
+    background-color: inherit;
+    border-bottom: 1px solid #fff;
+    color: #fff;
+    margin-bottom: 20px;
+}
+
+input::placeholder{
+    color: gray;
+    padding-left: 20px;
+    line-height: 26px;
+    font-weight: 400;
+    letter-spacing: 1px;
+    font-size: 16px;
+}
+
+input:focus {
+    border: none;
+    outline: none;    
+    border-bottom: 1px solid #fff;
+}
+
+textarea {
+    padding-top: 10px;
+    border: none;
+    outline: none;
+    height: 100px;
+    background-color: inherit;
+    border-bottom: 1px solid #fff;
+    color: #fff;
+    margin-bottom: 20px;    
+    font-size: 16px;
+}
+
+textarea::placeholder{
+    color: gray;
+    padding-left: 20px;
+    line-height: 26px;
+    font-weight: 400;
+    letter-spacing: 1px;
+    font-size: 20px;
+}
+
+.btn-wrapper {
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    font-size: 16px;
+    font-weight: 700;
+}
