--- a/src/styles/Habilidades.css
+++ b/src/styles/Habilidades.css
@@ -1,12 +1,14 @@
 .habilidades {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 20px;
-    margin-top: 50px;
+    grid-template-columns: 1fr;
+    grid-gap: 5px;
+    margin-top: 10px;
+    border-bottom: 1px solid #fff;
+    padding-bottom: 20px;
 }
 
 .habilidades h1 {
-    font-size: 48px;
+    font-size: 32px;
     color: #fff;
     letter-spacing: -1.5px;
     font-family: "Space Grotesk", sans-serif;
@@ -14,9 +16,35 @@
 }
 
 .habilidades p {
-    font-size: 18px;
+    font-size: 16px;
     color: #d9d9d9;
     font-weight: 500;
     line-height: 28px;
-    margin-top: 5px;
+    margin-top: 0px;
 }
+
+@media (min-width: 640px) {
+    .habilidades {
+        grid-template-columns: repeat(2, 1fr);
+    }    
+    .habilidades h1 {
+        font-size: 48px;
+    }
+}   
+
+@media (min-width: 920px){
+    .habilidades {
+        grid-template-columns: repeat(3, 1fr);
+        grid-gap: 20px;
+        margin-top: 50px;
+    }
+
+
+
+    .habilidades p {
+        font-size: 18px;
+        margin-top: 5px;
+    }
+
+}
+
